Edited wiki page through web user interface.

--- a/wiki/ClassWrap.wiki
+++ b/wiki/ClassWrap.wiki
@@ -356,10 +356,9 @@ binding API.
 
 =Example of using !ClassWrap=
 
-The complete test/demo code for !ClassWrap can be found here:
+Here are links to several class bindings which use !ClassWrap:
 
   * [http://code.google.com/p/v8-juice/source/browse/trunk/src/client/sample/BoundNative/BoundNative.cpp BoundNative.cpp]
-
-The [PathFinderClass PathFinder] class also, as of late October 2009, uses !ClassWrap:
-
+  * [http://code.google.com/p/v8-juice/source/browse/trunk/src/client/sample/PosixFILE/PosixFILE.cpp PosixFILE.cpp]
+  * [http://code.google.com/p/v8-juice/source/browse/extra-plugins/src/expat ExpatParser]
   * [http://code.google.com/p/v8-juice/source/browse/trunk/src/lib/juice/PathFinder-cw.cc PathFinder-cw.cc]
