--- a/wiki/ChangeLog.wiki
+++ b/wiki/ChangeLog.wiki
@@ -10,6 +10,9 @@ are at the top. Dates written extra large are release dates. This contains only 
   * http://code.google.com/p/v8-juice/source/list
 
 ----
+*2009 Nov 14*
+  * Added an [PluginExpatParser XML parser plugin].
+
 *2009 Nov 9*
   * `JSToNative<std::string>` now treats strings as UTF8 instead of ASCII. (Thanks go to Rob Tsuk.)
   * `NativeToJS<uint32_t>` now behaves properly. (Thanks go to Steven Grafton.)
