--- a/wiki/PluginExpatParser.wiki
+++ b/wiki/PluginExpatParser.wiki
@@ -125,6 +125,7 @@ when:
 
 =Examples=
 
+== Everything You Need to Know ==
 Here's all there is to know:
 
 {{{
@@ -189,3 +190,72 @@ endNode: root userData = hi, world
 }}}
 
 Notice that `charHandler` is called twice for the one CDATA block. This is because the CDATA spans input lines and are are parsing incrementally. In such a case it is important to _append_ the CDATA if accumulating it internally in the callback, rather than over-writing data from previous calls on the same XML node.
+
+== Converting XML to Object Trees ==
+
+Here's an example of how to convert XML input to an object tree:
+
+{{{
+/**
+   Converts the given XML to an object tree with this structure:
+
+   {
+     tag:'NodeName',
+     attr:{key/val pairs of XML element attributes},
+     children:[ ... nested objects ... ],
+     cdata:string_of_char_data_from_xml_node
+   }
+
+   The cdata, attr, and children fields will be missing if the node has
+   no cdata, attributes, or children.
+
+   On error it throws. On success the root object in the tree
+   is returned.
+*/
+function XMLToObject(xml)
+{
+    var p = new ExpatParser();
+    var state = {
+        root:null, // root node
+        stack:[], // node stack
+        cur:null // current node
+    };
+    p.userData = state;
+    p.startNode = function(ud,name,attr)
+    {
+        var o = {tag:name};
+        if( ! ud.root ) ud.root = o;
+        if( ud.cur )
+        {
+            if( ! ud.cur.children ) ud.cur.children = [];
+            ud.cur.children.push( o );
+        }
+        for( var k in attr )
+        {
+            if( ! o.attr ) o.attr = {};
+            o.attr[k] = attr[k];
+        }
+        ud.stack.push(o);
+        ud.cur = o;
+    };
+    p.endNode = function(ud,name)
+    {
+        ud.stack.pop();
+        ud.cur = ud.stack.length ? ud.stack[ud.stack.length-1] : null;
+    };
+    p.charHandler = function(ud,text,len)
+    {
+        if( ! ud.cur.cdata ) ud.cur.cdata = "";
+        ud.cur.cdata += text;
+    };
+    try
+    {
+        p.parse( xml, true );
+    }
+    finally
+    {
+        p.destroy();
+    }
+    return state.root;
+}
+}}}
