--- a/wiki/CommentaryOnV8.wiki
+++ b/wiki/CommentaryOnV8.wiki
@@ -30,6 +30,10 @@ All of that said, i'm probably one of the world's biggest fans of Google's techn
 
 One strong advantage v8 has over older, more mature JS engines, like !SpiderMonkey and !QtScript, is its license. With its BSD license it can be included into commercial projects without license contamination. It also allows me, the extension author, to license my v8-using code however i want to. !SpiderMonkey, which is MPL (basically GPL), and !QtScript, which is QPL/GPL/Commercial, cannot provide this level of freedom. (Ironic, isn't it, seeing as the GPL's primary purpose is to protect the freedom of its users?)
 
+== It's Frigging Fast ==
+
+v8 is damned fast compared to !SpiderMonkey (the engine used by the Mozilla family of web browsers). Function calls, for example, are about _200 times_ faster. i cannot say that _all_ operations are faster (i haven't measured them). Interestingly, early versions of v8 were really slow when calling functions which were members of an object (about 10x slower than free functions, IIRC), but changes in early 2009 fixed that, and the speed difference between calling member- vs. non-member functions is now much smaller (about 10%-20% slower than calling a free function).
+
 =Criticisms=
 
 In my experience, these are the significant problems and caveats associated
@@ -41,7 +45,7 @@ with binding classes in JS, as demonstrated on the [CreatingJSClasses] page.
 
 v8 allows us to register "weak pointer callbacks" which get called when a
 given JS object is to be destructed by the GC system. However, even if we
-register destructors, v8 may decide to never call the GC. Doh. So we still
+register destructors, v8 may decide to _never_ call the GC. Doh. So we still
 never get a guaranty that our destructors are all. This is, in my opinion, a
 half-ass non-solution. For bound types which require a destructor call for
 proper cleanup, it is useless as a cleanup mechanism, requiring the client to
@@ -58,28 +62,20 @@ said it all elsewhere and i'm just beating a dead horse.
 
 Oh, except to say: reportedly, the reason which v8 never guarantees that GC
 will be called (even when it is shutting down and therefore cannot be
-executing client-side JS code), is for "performance reason." So, it trades
-performance for leaks. Great. Just what we need in a script-language library,
+executing client-side JS code), is for "performance reasons." So, it trades
+performance for resource leaks. Great. Just what we need in a script-language library,
 where objects are indiscriminately created by the thousands by script users
 who have no idea what the underlying call to `malloc()` just robbed them of.
 
+To the v8 team's credit, though, their intentions behind shutting down without running GC beforehand was to speed up their Chromium browser, for which v8 was originally authored. In the context of their browser, where each web page is its own system process and JS does not use native types which require a dtor call for proper semantics, this limitation is not so serious. However, in uses outside of Chromium, where we'd like to bind database handles, output streams, and such, it is extremely annoying, however.
 
 ==The Stack and static functions==
 
-v8's stack-centric API makes it extremely difficult (or even impossible) to
-keep shared copies of a JS objects for passing around amongst native code.
-e.g. if we want to make a JS class from the main library or app available to
-plugins, we can't just have a static copy of JSClassCreator in the main
-library which we can pass around. Instead, JS data must be be passed around
-only in JS-space. In my experience, instantiating a static JSClassCreator (or
-subclass) will crash the app somewhere in v8. That makes some potentially
-useful features of JSClassCreator, such as the `NewInstance()` member, next to
-useless (except in the rare case of having to instantiate an instance directly
-after creating the class).
+v8's stack-centric API makes it difficult to keep shared copies of a JS objects for passing around amongst native code. e.g. if we want to make a JS class from the main library or app available to plugins, we can't just have a static copy of JS handle (`v8::Handle<T>`) in the main library which we can pass around because the static object is not allowed to be created until after v8 is initialized. In my experience, instantiating a static JS handle will crash the app somewhere in v8 unless we're careful about where that static is instantiated.
 
 ==Post-`main()` Issues==
 
-Post-`main()` issues are a real-world problem all v8 clients face, especially anyone who wraps classes using the weak pointer mechanism. In short, the problem is this: v8's API, instead of having the user pass around his context info (as in !SpiderMonkey, and as v8 should do), keeps it all in static/shared functions. Sometime post-`main()`, that data will be destroyed. If we have a wrapped class which is not destroyed by v8 (because its GC didn't kick in) but is destroyed by a supplemental garbage collector (long story), the object being destroyed must not interact with v8 in any way (type conversions, creating new handles, etc.), as v8 may have been destroyed and the class would then crash (again, post-`main()`). Any time you see crashes post-`main()` in v8 client code, the first suspect is delayed destruction of shared objects which live outside v8 but may interact with it. The only known workaround for some of these problems is to not clean up the long-living objects and let them be destroyed without calling their destructors. Indeed, that is the only approach supported by v8 (which never guarantees that it will destruct an object, even if we go through the trouble of registering a destructor), for reasons only the v8 architects comprehend.
+Post-`main()` issues are a real-world problem all v8 clients face, especially anyone who wraps classes using the weak pointer mechanism. In short, the problem is this: v8's API, instead of having the user pass around his context info (as in !SpiderMonkey, and as v8 should do), keeps it all in static/shared functions. Sometime post-`main()`, that data will be destroyed. If we have a wrapped class which is not destroyed by v8 (because its GC didn't kick in) but is destroyed by a supplemental garbage collector (long story), the object being destroyed must not interact with v8 in any way (type conversions, creating new handles, etc.), as v8 may have been destroyed and the class would then crash (again, post-`main()`). Any time you see crashes post-`main()` in v8 client code, the first suspect is delayed destruction of shared objects which live outside v8 but may interact with it. The only known workaround for some of these problems is to not clean up the long-living objects and let them be destroyed without calling their destructors. Indeed, that is the only approach supported by v8 (which never guarantees that it will destruct an object, even if we go through the trouble of registering a destructor).
 
 ==Narrowed Applicability due to Design Constraints==
 
@@ -99,12 +95,12 @@ Having said that: v8's approach will apparently make it possible to write SWIG w
 
 ==WTFM==
 
-*Write The Fucking Manual!*
+*_Write The Fucking Manual!_*
 
 Another hindrance is the relative lack of v8 documentation. Most functions and classes aren't documented or have only a single line with no real information (e.g. what _exactly_ does "Enters the context" mean?). This means a great deal of experimentation in order to find out if something will or won't work in v8 (and another amount of guesswork as to whether it's actually _legal_ to do it that way in v8).
 
-Any library which is to enjoy widespread use _must_ be well documented. It's a simple fact.
+Any library which is to enjoy widespread use _must_ be well documented. It's a simple fact. History is full of libraries which thrive despite lacking docs (libexpat comes to mind), but i find that shameful.
 
-The members of the mailing lists have been extraordinarily helpful on these points, and it is only because of them that i've been able to accomplish anything beyond "hello, world!" in v8.
+The members of the mailing lists have been extraordinarily helpful in helping me understand v8 usage, and it is only because of them that i've been able to accomplish anything beyond "hello, world!" in v8.
 
 As i enjoy writing, and i tend to write "insane" API docs (to quote one user), i did contact the v8 team about contributing API documentation. However, the process of getting involved in the project is just too much effort for my tastes. Why can't i just upload a patch, without having to install (and learn) a custom set of tools? Maybe one day Google will pay me to document v8 (dream on!), but until then using v8 will require a lot more experimentation and guesswork than it really should.
